<resources>
    <string name="app_name">Global Audit</string>

    <!--Login and register -->
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="email_address">Email</string>
    <string name="psw">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="newAcount">CREAR CUENTA</string>
    <string name="title_activity_register">Register</string>

    <string name="terms_conditions">Al crear su cuenta, usted acepta los Términos y condiciones de GlobalSTD</string>


    <string name="standards">Estándares</string>


    <!--  menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_standards">@string/standards</string>
    <string name="menu_my_checklist">Mis CheckList</string>
    <string name="menu_historical">Historial</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_globaltv">Global TV</string>

    <string name="menu_users">Usuarios</string>
    <string name="menu_contracts">Contratos</string>
    <string name="menu_suppliers">Proveedores</string>
    <string name="menu_audits">Auditorias</string>
    <string name="menu_complaints">Quejas</string>

    <string name="menu_settings">Configuración</string>

    <string name="menu_logout">Cerrar sesión</string>

    <string-array name="date_alignement">
        <item>"Top"</item>
        <item>"Center"</item>
        <item>"Bottom"</item>
    </string-array>
    <integer-array name="date_alignement_values">
        <item >0</item>
        <item >1</item>
        <item >2</item>
    </integer-array>


    <!-- list void -->
    <string name="void_audit">No se encuentran auditorias, por el momento</string>

    <string name="accept">Aceptar</string>
    <string name="notes">Notas</string>


    <!-- alerts-->
    <string name="invalid_credentials">Credenciales inválidas, intente de nuevo</string>
    <string name="internet_error">Internet error, verifique su conexión</string>
    <string name="server_error">Credenciales inválidas, intente de nuevo</string>

    <string name="email_alreay_exists">Esta cuenta de email, ya se encuentra ya mismo registradao</string>
    <string name="company_name_already_exists">Esa nombre de compañia, ya se encuentra ya mismo registrada</string>



    <string name="invalidad_email">Verique su cuenta de email</string>
    <string name="invalidad_psw">Cerrar sesión</string>
    <string name="enter_psw">ingrese su contraseña</string>

    <string name="enter_name">ingrese su nombre</string>
    <string name="enter_lastname">ingrese sus apellidos</string>



    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="confirmation_alert">Alerta de Confirmación</string>
    <string name="message_evaluation">¿Se encuentra seguro con finalizar su auto-evaluación?\n Si acepta se mostrará su resultado y ya no podrá editarse.</string>
    <string name="message_historical">En este momento se encuentra una evaluación pendiente\n¿Desea continuarla o iniciar una nueva?</string>
    <string name="message_exit">¿Desea salir de la aplicación?</string>
    <string name="message_logout">¿Desea cerrar sesión?</string>

    <string name="yes">Si</string>
    <string name="continues">Continuar</string>
    <string name="create_new">Crear nueva</string>
    <string name="alert">Alert</string>
    <string name="info">Info</string>
    <string name="custom">Custom</string>
    <string name="sticky">Sticky</string>
    <string name="bottom">Show at bottom of screen</string>
    <string name="remove">Remove</string>
    <string name="cancel_all">Cancel All</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="show_appmsg">Show AppMsg!</string>
    <string name="style">Style</string>
    <string name="priority">Priority</string>
    <string name="your_message_here">Your message here</string>
    <string name="custom_parent">Custom parent</string>
</resources>
