<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/md_white_1000">

    <ScrollView
        android:id="@+id/animated_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/imageSplash"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp" />


            <!-- Name -->
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/et_divider_not_focused" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <!-- LastName-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastname"
                        android:textColorHint="@color/et_divider_not_focused"
                        android:inputType="textPersonName"
                        />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <!-- Email-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registrationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtRegistrationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:textColorHint="@color/et_divider_not_focused"
                        android:inputType="textEmailAddress"
                        />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <!-- Password-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/txtPsw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psw"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"

                        android:textColorHint="@color/et_divider_not_focused"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/btnCreateAcount"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_button">

                    <TextView
                        android:id="@+id/lblCreateAcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/newAcount"
                        android:textColor="@color/md_white_1000"
                        android:textSize="20sp"

                        android:gravity="center_horizontal"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginTop="65dp">

                    <TextView
                        android:id="@+id/lblTermsConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/terms_conditions"
                        android:textColor="@color/md_gray_global_50"
                        android:textSize="16dp"
                        android:gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
